<resources>
    <string name="app_name">Przeliczacz jednostek</string>
    <string name="value">Podaj wielkość</string>
    <string name="btnMeter">Metry</string>
    <string name="btnYard">Jardy</string>
    <string name="tekst" translatable="false">tekst</string>
    <string name="formatMeter">%s m (metr)</string>
    <string name="formatYards">%s yd (jard)</string>
    <string name="formatFeet">%s\' (stopa)</string>
    <string name="formatInch">%s\" (cal)</string>
    <string name="formatMileL">%s mi (mila lądowa)</string>
    <string name="formatMileM">%s Mm (mila morska)</string>
    <string name="formatKGram" translatable="false">%s kg (kilogram)</string>
    <string name="formatKarat" translatable="false">%s karat</string>
    <string name="formatFunt" translatable="false">%s lb (funt)</string>
    <string name="formatUncja" translatable="false">%s uncja</string>
    <string name="formatLut" translatable="false">%s dr (łut)</string>
    <string name="formatCetnarM" translatable="false">%s mały cetnar</string>
    <string name="formatCetnarD" translatable="false">%s Duży cetnar</string>
    <string name="mileM">Mile morskie</string>
    <string name="mileL">Mile lądowe</string>
    <string name="foot">Stopa</string>
    <string name="inch">Cale</string>
    <string name="default_value" translatable="false">1</string>
    <string name="uk_flag_title" translatable="false">English</string>
    <string name="pl_flag_title" translatable="false">Polski</string>
    <string name="exit_title">Zakończ</string>
    <string name="SharedPreferencesValue" translatable="false">LANG</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_distance">Odległość</string>
    <string name="menu_capacity">Pojemność</string>
    <string name="menu_scale">Waga</string>
    <string name="nav_exit">Zakończ</string>
    <string name="kgram" translatable="false">Kilogram</string>
    <string name="karat" translatable="false">Karat</string>
    <string name="funt">Funt</string>
    <string name="uncja">Uncja</string>
    <string name="lut">Lut</string>
    <string name="gran">Gran</string>
    <string name="centarM">Mały centar</string>
    <string name="centarD">Duży Centar</string>
</resources>