<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_distance_mobile">

    <fragment
        android:id="@+id/nav_distance_mobile"
        android:name="com.example.przeliczaczjednostek.screens.distance.DistanceFragment"
        android:label="@string/menu_distance"
        tools:layout="@layout/fragment_distance" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.przeliczaczjednostek.screens.distance.DistanceFragment"
        android:label="@string/menu_capacity"
        tools:layout="@layout/fragment_distance" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.przeliczaczjednostek.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_scale"
        tools:layout="@layout/fragment_slideshow" />
</navigation>