<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/NUmber"
            android:autofillHints="@string/value"
            android:hint="@string/value"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnMeter"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/btnMeter"
        android:textColor="@color/purple_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnYard"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/btnYard"
        android:textColor="@color/purple_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>